--- a/examples/ShopifyDashboard/extension_configuration.json
+++ b/examples/ShopifyDashboard/extension_configuration.json
@@ -1,35 +1,25 @@
 {
-  "position": "pim.product.panel",
-  "name": "sdk_script_extension_stock_data",
+  "position": "pim.dashboard",
+  "name": "shopify_dashboard",
   "type": "sdk_script",
-  "file": "dist/stock_data.js",
+  "file": "dist/shopify_dashboard.js",
   "configuration": {
-    "default_label": "Stock data on panel",
+    "default_label": "Shopify Dashboard",
     "labels": {
-      "en_US": "Stock data on panel"
+      "en_US": "Shopify Dashboard"
     }
   },
+  "custom_variables": {
+    "shopify_url": "https://your-store.myshopify.com"
+  },
   "credentials": [
-      {
-            "code": "credential_example_1",
-            "type": "Bearer Token",
-            "value": "your_auth_token"
-        },
-        {
-            "code": "credential_example_2",
-            "type": "Basic Auth",
-            "value": {
-             "username": "your_username",
-             "password": "your_password"   
-            }
-        },
-        {
-            "code": "credential_example_3",
-            "type": "Custom Header",
-            "value": {
-             "header_key": "your_header_key",
-             "header_value": "your_header_value"   
-            }
-        }
+    {
+      "code": "shopify_access_token",
+      "type": "Custom Header",
+      "value": {
+        "header_key": "X-Shopify-Access-Token",
+        "header_value": "your_shopify_access_token_here"
+      }
+    }
   ]
 }
